--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/gauravdas014/LtPDF#readme",
   "dependencies": {
+    "bluebird": "^3.7.2",
     "discord.js": "^12.5.1",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "handlebars": "^4.7.7"
   }
 }
