--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bluebird": "^3.7.2",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
-    "handlebars": "^4.7.7"
+    "handlebars": "^4.7.7",
+    "puppeteer": "^8.0.0"
   }
 }
