--- a/package.json
+++ b/package.json
@@ -18,10 +18,9 @@
   },
   "homepage": "https://github.com/gauravdas014/LtPDF#readme",
   "dependencies": {
-    "bluebird": "^3.7.2",
     "discord.js": "^12.5.1",
     "dotenv": "^8.2.0",
-    "handlebars": "^4.7.7",
+    "express": "^4.17.1",
     "puppeteer": "^8.0.0"
   }
 }
